<resources>
    <string name="app_name">당신의 발자취</string>
    <string name="main_btm_nav_home_title">홈</string>
    <string name="main_btm_nav_gallary_title">갤러리</string>
    <string name="main_btm_nav_post_title">발자취 기록하기</string>
    <string name="main_btm_nav_feed_title">피드</string>
    <string name="main_btm_nav_my_page_title">마이페이지</string>
    <string name="home_btn_try_get_http_method">GET API 보내기</string>
    <string name="home_btn_try_post_http_method">POST API 보내기</string>
    <string name="home_et_id">아이디를 입력하세요.</string>
    <string name="home_et_pw">비밀번호를 입력하세요.</string>
    <string name="my_page_tv_counter">%1d 번 눌렀습니다.</string>
    <string name="my_page_btn_counting_number">숫자 세기</string>
    <string name="post_tv_fragment_title">기록하기</string>
    <string name="post_tv_location_hint">어디에서 찍은 사진인가요?</string>
    <string name="post_tv_title_hint">제목</string>
    <string name="post_tv_content_hint">내용</string>
    <string name="post_sw_text">공개</string>
    <string name="post_btn_text">작성하기</string>
    <string name="post_edit_tv_title">수정하기</string>
    <string name="post_tv_back">"발자취 기록하기를 취소하시겠습니까? \n작성 취소 선택시, 작성된 글은 저장되지 않습니다."</string>
    <string name="post_edit_tv_back">"발자취 수정하기를 취소하시겠습니까? \n작성 취소 선택시, 작성된 글은 저장되지 않습니다."</string>
    <string name="post_tv_back_cancel">취소</string>
    <string name="post_tv_back_ok">확인</string>
    <string name="cal_tv_fragment_title">날짜 선택</string>
    <string name="cal_btn_text">확인</string>
    <string name="search_loc_tv_fragment_title">검색</string>
    <string name="search_loc_et_search_hint">장소 검색</string>
    <string name="search_loc_tv_detail">검색 시 지역명을 함께 입력해주세요 (예: 투썸플레이스 강남)</string>
    <string name="search_loc_tv_result">검색결과</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gallery_tv_title">갤러리</string>
    <string name="gallery_tv_feature_1">모아보기</string>
    <string name="gallery_tv_feature_2">날짜별</string>
    <string name="gallery_tv_dot">.</string>
    <string name="gallery_tv_year_num">2023</string>
    <string name="gallery_tv_year">년</string>
    <string name="gallery_tv_month_num">1</string>
    <string name="gallery_tv_month">월</string>
    <string name="gallery_tv_day_num">29</string>
    <string name="gallery_tv_day">일</string>
    <string name="gallery_exception_tv_des">발자취가 하나도 없어요 T.T\n새로운 발자취를 남기세요!</string>
    <string name="gallery_tv_post_title">발자취 제목</string>
    <string name="gallery_tv_post_like_cnt">1</string>
    <string name="gallery_tv_post_position">발자취 위치</string>
    <string name="gallery_toolbar_title">갤러리 발자취 타이틀</string>
    <string name="gallery_toolbar_option_1">신고하기</string>
    <string name="gallery_toolbar_option_2">수정하기</string>
    <string name="gallery_toolbar_option_3">삭제하기</string>
    <string name="galleryinfo_tv_post_day">2022.01.15</string>
    <string name="galleryinfo_tv_post_username">김다미</string>
    <string name="galleryinfo_tv_post_comment_cnt">3</string>
    <string name="galleryinfo_tv_post_des">그해 우리는 많은 관심 부탁드러요~!</string>
    <string name="mapTimeSettingTitle">기간 선택</string>
    <string name="report_reason_title">신고 사유</string>
    <string name="report_reason_0">욕설이나 차별 혐오성 글</string>
    <string name="report_reason_1">음란, 선정성으로 유해한 글</string>
    <string name="report_reason_2">불법 정보를 포함한 글</string>
    <string name="report_reason_3">영리목적/스팸홍보/도배글</string>
    <string name="report_reason_4">개인 정보를 노출하는 글</string>
    <string name="report_reason_5">폭력/차별적/불쾌한 글</string>
    <string name="report_reason_6">기타</string>
    <string name="report_result_user">"유저 신고가 완료되었습니다 \n(각기 다른 사용자에게 신고가 3번 누적될 경우 해당 계정은 한달간 정지됩니다.)"</string>
    <string name="report_result_comment">"댓글 신고가 완료되었습니다 \n(각기 다른 사용자에게 신고가 3번 누적될 경우 해당 계정은 한달간 정지됩니다.)"</string>
    <string name="report_result_posting">"게시글 신고가 완료되었습니다 \n(각기 다른 사용자에게 신고가 3번 누적될 경우 해당 계정은 한달간 정지됩니다.)"</string>
    <string name="privacy_policy">&lt;당신의 발자취&gt;(이하 \'당신의 발자취\')은(는) 개인정보 보호법 제30조에 따라 정보주체의 개인정보를 보호하고 이와 관련한 고충을 신속하고 원활하게 처리할 수 있도록 하기 위하여 다음과 같이 개인정보 처리방침을 수립·공개합니다.
○ 이 개인정보처리방침은 2023년 4월 23부터 적용됩니다.
\n
제1조(개인정보의 처리 목적)
\n
&lt;당신의 발자취&gt;(이하 \'당신의 발자취\')은(는) 다음의 목적을 위하여 개인정보를 처리합니다. 처리하고 있는 개인정보는 다음의 목적 이외의 용도로는 이용되지 않으며 이용 목적이 변경되는 경우에는 「개인정보 보호법」 제18조에 따라 별도의 동의를 받는 등 필요한 조치를 이행할 예정입니다.
1. 홈페이지 회원가입 및 관리
회원 가입의사 확인, 회원제 서비스 제공에 따른 본인 식별·인증, 각종 고지·통지 목적으로 개인정보를 처리합니다.

2. 재화 또는 서비스 제공
서비스 제공을 목적으로 개인정보를 처리합니다.
\n
제2조(개인정보의 처리 및 보유 기간)
\n
① &lt;당신의 발자취&gt;은(는) 법령에 따른 개인정보 보유·이용기간 또는 정보주체로부터 개인정보를 수집 시에 동의받은 개인정보 보유·이용기간 내에서 개인정보를 처리·보유합니다.

② 각각의 개인정보 처리 및 보유 기간은 다음과 같습니다.
\n
회사는 원칙적으로 이용자의 개인정보를 보유기간이 경과되면 지체없이 파기하고 있습니다. 단, 이용자에게 개인정보 보관기간에 대해 별도의 동의를 얻은 경우 혹은 법령에서 일정 기간 정보보관 의무를 부과하는 경우에는 해당 기간 동안 개인정보를 안전하게 보관합니다.
1.	서비스 제공을 위해 수집한 회원가입 정보 : 회원탈퇴하기 전까지
2.	법령에 의한 개인정보 보유
•	표시/광고에 관한 기록\n
◦ 보존근거 : 전자상거래 등에서의 소비자보호에 관한 법률
◦ 보존기간 : 6개월\n
•	계약 또는 청약철회 등에 관한 기록\n
◦ 보존근거 : 전자상거래 등에서의 소비자보호에 관한 법률
◦ 보존기간 : 5년\n
•	소비자의 불만 또는 분쟁처리에 관한 기록\n
◦ 보존근거 : 전자상거등에서의 소비자보호에 관한 법률
◦ 보존기간 : 3년\n
•	신용정보의 수집, 처리 및 이용 등에 관한 기록\n
◦ 보존근거 : 신용정보의 이용 및 보호에 관한 법률
◦ 보존기간 : 3년\n
•	본인확인에 관한 기록보존\n
◦ 보존근거 : 정보통신망 이용척진 및 정보보호에 관한 법률
◦ 보존기간 : 6개월\n
•	접속에 관한 기록보존\n
◦ 보존근거 : 통신비밀보호법에 관한 법률
◦ 보존기간 : 3개월\n
제3조(처리하는 개인정보의 항목)
\n
① &lt;당신의 발자취&gt;은(는) 다음의 개인정보 항목을 처리하고 있습니다.
•		회원가입 및 서비스 이용 과정에서 이용자가 개인정보 수집에 대해 동의를 하고 수집하는 정보
•	서비스 이용 과정에서 자동으로 생성/수집되는 정보 : 서비스이용기록, 단말기식별번호, OS(Androiod) 및 버전, PUSH 토큰, 단말접속일시, 세션아이디, 단말 MAC address 사용자 위치정보
•	상기 단말기에 관한 정보는 개인을 식별할 수 없는 형태이며 회사는 수집된 정보를 바탕으로 개인을 식별하는 일체의 활동을 하지 않습니다.
\n
제4조(개인정보처리의 위탁에 관한 사항)
\n
① 회사는 이용자의 개인정보를 원칙적으로 외부에 공개하지 않습니다. 단, 법령 규정에 의거하거나 수사 목적으로 법령에 정해진 절차와 방법에 따라 수사기관의 요구가 있는 경우, 이용자의 별도 동의가 있는 경우는 예외로 합니다.
\n
제5조(개인정보의 파기절차 및 파기방법)
\n
① &lt;당신의 발자취&gt;은(는) 개인정보 보유기간의 경과, 처리목적 달성 등 개인정보가 불필요하게 되었을 때에는 지체없이 해당 개인정보를 파기합니다.

② 정보주체로부터 동의받은 개인정보 보유기간이 경과하거나 처리목적이 달성되었음에도 불구하고 다른 법령에 따라 개인정보를 계속 보존하여야 하는 경우에는, 해당 개인정보를 별도의 데이터베이스(DB)로 옮기거나 보관장소를 달리하여 보존합니다.

③ 개인정보 파기의 절차 및 방법은 다음과 같습니다.
        \n
1. 파기절차
&lt;당신의 발자취&gt;은(는) 파기 사유가 발생한 개인정보를 선정하고, &lt;당신의 발자취&gt;의 개인정보 보호책임자의 승인을 받아 개인정보를 파기합니다.
2. 파기방법
전자적 파일 형태의 정보는 기록을 재생할 수 없는 기술적 방법을 사용합니다\n

제6조(정보주체와 법정대리인의 권리·의무 및 그 행사방법에 관한 사항)\n
① 정보주체는 당신의 발자취에 대해 언제든지 개인정보 열람·정정·삭제·처리정지 요구 등의 권리를 행사할 수 있습니다.
② 제1항에 따른 권리 행사는당신의 발자취에 대해 「개인정보 보호법」 시행령 제41조제1항에 따라 서면, 전자우편, 모사전송(FAX) 등을 통하여 하실 수 있으며 당신의 발자취은(는) 이에 대해 지체 없이 조치하겠습니다.
③ 제1항에 따른 권리 행사는 정보주체의 법정대리인이나 위임을 받은 자 등 대리인을 통하여 하실 수 있습니다.이 경우 “개인정보 처리 방법에 관한 고시(제2020-7호)” 별지 제11호 서식에 따른 위임장을 제출하셔야 합니다.
④ 개인정보 열람 및 처리정지 요구는 「개인정보 보호법」 제35조 제4항, 제37조 제2항에 의하여 정보주체의 권리가 제한 될 수 있습니다.
⑤ 개인정보의 정정 및 삭제 요구는 다른 법령에서 그 개인정보가 수집 대상으로 명시되어 있는 경우에는 그 삭제를 요구할 수 없습니다.
⑥ 당신의 발자취은(는) 정보주체 권리에 따른 열람의 요구, 정정·삭제의 요구, 처리정지의 요구 시 열람 등 요구를 한 자가 본인이거나 정당한 대리인인지를 확인합니다.
\n
제7조(행태정보의 수집·이용·제공 및 거부 등에 관한 사항)
\n
행태정보의 수집·이용·제공 및 거부등에 관한 사항
&lt;당신의 발자취&gt;은(는) 온라인 맞춤형 광고 등을 위한 행태정보를 수집·이용·제공하지 않습니다.
\n
제8조(추가적인 이용·제공 판단기준)
\n
&lt;당신의 발자취&gt;은(는) ｢개인정보 보호법｣ 제15조제3항 및 제17조제4항에 따라 ｢개인정보 보호법 시행령｣ 제14조의2에 따른 사항을 고려하여 정보주체의 동의 없이 개인정보를 추가적으로 이용·제공할 수 있습니다.
이에 따라 &lt;당신의 발자취&gt;가(이) 정보주체의 동의 없이 추가적인 이용·제공을 하기 위해서 다음과 같은 사항을 고려하였습니다.
▶ 개인정보를 추가적으로 이용·제공하려는 목적이 당초 수집 목적과 관련성이 있는지 여부
▶ 개인정보를 수집한 정황 또는 처리 관행에 비추어 볼 때 추가적인 이용·제공에 대한 예측 가능성이 있는지 여부
▶ 개인정보의 추가적인 이용·제공이 정보주체의 이익을 부당하게 침해하는지 여부
▶ 가명처리 또는 암호화 등 안전성 확보에 필요한 조치를 하였는지 여부
※ 추가적인 이용·제공 시 고려사항에 대한 판단기준은 사업자/단체 스스로 자율적으로 판단하여 작성·공개함
\n
제9조 (개인정보 보호책임자에 관한 사항)
① 당신의 발자취 은(는) 개인정보 처리에 관한 업무를 총괄해서 책임지고, 개인정보 처리와 관련한 정보주체의 불만처리 및 피해구제 등을 위하여 아래와 같이 개인정보 보호책임자를 지정하고 있습니다.
•	▶ 개인정보 보호책임자
•	성명 :당신의 발자취
•	연락처 : footstepdangbal@gmail.com,

② 정보 주체께서는 당신의 발자취 의 서비스(또는 사업)을 이용하시면서 발생한 모든 개인정보 보호 관련 문의, 불만처리, 피해구제 등에 관한 사항을 개인정보 보호책임자 및 담당부서로 문의하실 수 있습니다. 당신의 발자취 은(는) 정보주체의 문의에 대해 지체 없이 답변 및 처리해드릴 것입니다.
\n
제10조(개인정보 처리방침 변경)
        \n
①	 이 개인정보처리방침은 2023년 4월 23부터 적용됩니다.
</string>
</resources>