<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/post_cal_dialog"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/reportTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/report_reason_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center_vertical" />

        <ImageButton
            android:id="@+id/btn_report_close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:src="@drawable/post_cal_close" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/report_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/btn_report_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_reason_0"
            android:textSize="18sp"
            android:textColor="@color/blackForText" />

        <RadioButton
            android:id="@+id/btn_report_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_reason_1"
            android:textSize="18sp"
            android:textColor="@color/blackForText" />

        <RadioButton
            android:id="@+id/btn_report_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_reason_2"
            android:textSize="18sp"
            android:textColor="@color/blackForText" />

        <RadioButton
            android:id="@+id/btn_report_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_reason_3"
            android:textSize="18sp"
            android:textColor="@color/blackForText" />

        <RadioButton
            android:id="@+id/btn_report_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_reason_4"
            android:textSize="18sp"
            android:textColor="@color/blackForText" />

        <RadioButton
            android:id="@+id/btn_report_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_reason_5"
            android:textSize="18sp"
            android:textColor="@color/blackForText" />

        <RadioButton
            android:id="@+id/btn_report_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_reason_6"
            android:textSize="18sp"
            android:textColor="@color/blackForText" />

    </RadioGroup>

    <Button
        android:id="@+id/reportBtnCheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cal_btn_text"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"/>

</LinearLayout>