<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:title="@string/gallery_toolbar_option_1"
        android:icon="@drawable/ic_galleryinfo_option_flag"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="#000000"
        />

    <item
        android:title="@string/gallery_toolbar_option_2"
        android:icon="@drawable/ic_galleryinfo_option_edit"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="#000000"
        />

    <item
        android:title="@string/gallery_toolbar_option_3"
        android:icon="@drawable/ic_galleryinfo_option_del"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="#000000"

        />



</menu>