<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/gallery_tv_year_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery_tv_year_num"
        android:textStyle="normal"
        android:textSize="20sp"
        android:textColor="#000000"



        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gallery_tv_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery_tv_year"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="normal"


        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@+id/gallery_tv_year_num"
        app:layout_constraintTop_toTopOf="@+id/gallery_tv_year_num" />


    <TextView
        android:id="@+id/gallery_tv_month_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery_tv_month_num"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="normal"


        android:layout_marginLeft="3dp"
        app:layout_constraintStart_toEndOf="@+id/gallery_tv_year"
        app:layout_constraintTop_toTopOf="@+id/gallery_tv_year_num" />

    <TextView
        android:id="@+id/gallery_tv_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery_tv_month"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="normal"


        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@+id/gallery_tv_month_num"
        app:layout_constraintTop_toTopOf="@+id/gallery_tv_year_num" />

    <TextView
        android:id="@+id/gallery_tv_day_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery_tv_day_num"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="normal"


        android:layout_marginLeft="3dp"
        app:layout_constraintStart_toEndOf="@+id/gallery_tv_month"
        app:layout_constraintTop_toTopOf="@+id/gallery_tv_year_num" />

    <TextView
        android:id="@+id/gallery_tv_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery_tv_day"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="normal"


        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@+id/gallery_tv_day_num"
        app:layout_constraintTop_toTopOf="@+id/gallery_tv_year_num" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/gallery_item_rv_section_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"

        android:layout_marginTop="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>