<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".src.main.post.PostSearchPositionActivity"
    android:padding="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/searchLinearTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/searchPosTvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search_loc_tv_fragment_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center_vertical" />

        <ImageButton
            android:id="@+id/searchPosIbQuit"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/post_cal_close" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:id="@+id/searchPosTvPlace"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:textSize="18sp"
            android:background="@drawable/search_position_et_round"
            android:textColor="@color/blackForText" />

        <ImageView
            android:id="@+id/searchPosIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/search_position_iv" />

        <EditText
            android:id="@+id/searchPosEtPlace"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginStart="45dp"
            android:hint="@string/search_loc_et_search_hint"
            android:textColor="@color/blackForText"/>
    </FrameLayout>

    <TextView
        android:id="@+id/searchPosTvDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="right"
        android:text="@string/search_loc_tv_detail"
        android:textColor="@color/blackForText"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/searchPosTvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_loc_tv_result"
            android:textSize="15sp"
            android:layout_marginRight="5dp"
            android:textStyle="bold"
            android:textColor="@color/blackForText"/>

        <TextView
            android:id="@+id/searchPosTvResultCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:textColor="@color/orange" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchPosRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp" />

</LinearLayout>